@@ -2,7 +2,7 @@ package io.fairspace.saturn.services.views;
 
 import java.io.IOException;
 import java.sql.SQLException;
-import java.util.stream.Collectors;
+import java.util.List;
 
 import io.milton.http.ResourceFactory;
 import io.milton.http.exceptions.BadRequestException;
@@ -10,11 +10,11 @@ import io.milton.http.exceptions.ConflictException;
 import io.milton.http.exceptions.NotAuthorizedException;
 import io.milton.resource.MakeCollectionableResource;
 import io.milton.resource.PutableResource;
+import jakarta.servlet.http.HttpServletRequest;
 import org.apache.jena.query.Dataset;
 import org.apache.jena.rdf.model.Model;
 import org.apache.jena.sparql.core.DatasetGraphFactory;
 import org.apache.jena.sparql.util.Context;
-import org.eclipse.jetty.server.Authentication;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -23,9 +23,11 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import io.fairspace.saturn.PostgresAwareTest;
-import io.fairspace.saturn.config.Config;
-import io.fairspace.saturn.config.ConfigLoader;
-import io.fairspace.saturn.config.ViewsConfig;
+import io.fairspace.saturn.auth.RequestContext;
+import io.fairspace.saturn.config.properties.CacheProperties;
+import io.fairspace.saturn.config.properties.ViewsProperties;
+import io.fairspace.saturn.config.properties.WebDavProperties;
+import io.fairspace.saturn.rdf.SparqlUtils;
 import io.fairspace.saturn.rdf.transactions.SimpleTransactions;
 import io.fairspace.saturn.rdf.transactions.Transactions;
 import io.fairspace.saturn.rdf.transactions.TxnIndexDatasetGraph;
@@ -44,14 +46,13 @@ import io.fairspace.saturn.webdav.blobstore.BlobStore;
 
 import static io.fairspace.saturn.TestUtils.createTestUser;
 import static io.fairspace.saturn.TestUtils.loadViewsConfig;
-import static io.fairspace.saturn.TestUtils.mockAuthentication;
 import static io.fairspace.saturn.TestUtils.setupRequestContext;
 import static io.fairspace.saturn.auth.RequestContext.getCurrentRequest;
 import static io.fairspace.saturn.services.views.ViewService.USER_DOES_NOT_HAVE_PERMISSIONS_TO_READ_FACETS;
 
-import static org.apache.jena.query.DatasetFactory.wrap;
+import static org.apache.jena.sparql.core.DatasetImpl.wrap;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
@@ -60,7 +61,7 @@ import static org.mockito.Mockito.when;
 @RunWith(MockitoJUnitRunner.class)
 public class ViewServiceTest extends PostgresAwareTest {
     static final String BASE_PATH = "/api/webdav";
-    static final String baseUri = ConfigLoader.CONFIG.publicUrl + BASE_PATH;
+    static final String baseUri = "http://localhost:8080" + BASE_PATH;
 
     @Mock
     BlobStore store;
@@ -71,6 +72,9 @@ public class ViewServiceTest extends PostgresAwareTest {
     @Mock
     private MetadataPermissions permissions;
 
+    @Mock
+    private MaterializedViewService materializedViewService;
+
     MetadataService api;
     ViewService viewService;
 
@@ -78,16 +82,29 @@ public class ViewServiceTest extends PostgresAwareTest {
     public void before()
             throws SQLException, BadRequestException, ConflictException, NotAuthorizedException, IOException {
         var viewDatabase = buildViewDatabaseConfig();
-        ViewsConfig config = loadViewsConfig("src/test/resources/test-views.yaml");
-        var viewStoreClientFactory = new ViewStoreClientFactory(config, viewDatabase, new Config.Search());
-
-        var dsg = new TxnIndexDatasetGraph(DatasetGraphFactory.createTxnMem(), viewStoreClientFactory);
+        var viewsProperties = loadViewsConfig("src/test/resources/test-views.yaml");
+        var configuration = new ViewStoreClient.ViewStoreConfiguration(viewsProperties);
+        var dataSource = getDataSource(viewDatabase);
+        var viewStoreClientFactory = new ViewStoreClientFactory(
+                viewsProperties, viewDatabase, materializedViewService, dataSource, configuration);
+        var dsg = new TxnIndexDatasetGraph(
+                viewsProperties, DatasetGraphFactory.createTxnMem(), viewStoreClientFactory, "http://localhost:8080");
 
         Dataset ds = wrap(dsg);
 
         loadTestData(ds);
 
-        viewService = new ViewService(ConfigLoader.CONFIG, config, ds, viewStoreClientFactory, permissions);
+        var searchProperties = buildSearchProperties();
+        var viewStoreReader =
+                new ViewStoreReader(searchProperties, viewsProperties, viewStoreClientFactory, configuration);
+        viewService = new ViewService(
+                searchProperties,
+                new CacheProperties(),
+                viewsProperties,
+                ds,
+                viewStoreReader,
+                viewStoreClientFactory,
+                permissions);
     }
 
     @Test
@@ -95,12 +112,12 @@ public class ViewServiceTest extends PostgresAwareTest {
         when(permissions.canReadFacets()).thenReturn(true);
         var facets = viewService.getFacets();
         var dateFacets = facets.stream()
-                .filter(facet -> facet.getType() == ViewsConfig.ColumnType.Date)
+                .filter(facet -> facet.type() == ViewsProperties.ColumnType.Date)
                 .toList();
         Assert.assertEquals(2, dateFacets.size());
 
         var boolFacets = facets.stream()
-                .filter(facet -> facet.getType() == ViewsConfig.ColumnType.Boolean)
+                .filter(facet -> facet.type() == ViewsProperties.ColumnType.Boolean)
                 .toList();
         Assert.assertEquals(1, boolFacets.size());
     }
@@ -118,23 +135,23 @@ public class ViewServiceTest extends PostgresAwareTest {
     @Test
     public void testDisplayIndex_IsSet() {
         var views = viewService.getViews();
-        var columns = views.get(1).getColumns().stream().toList();
+        var columns = views.get(1).columns().stream().toList();
         var selectedColumn = columns.stream()
-                .filter(c -> c.getTitle().equals("Morphology"))
-                .collect(Collectors.toList())
-                .get(0);
-        Assert.assertEquals(Integer.valueOf(1), selectedColumn.getDisplayIndex());
+                .filter(c -> c.title().equals("Morphology"))
+                .toList()
+                .getFirst();
+        Assert.assertEquals(Integer.valueOf(1), selectedColumn.displayIndex());
     }
 
     @Test
     public void testDisplayIndex_IsNotSet() {
         var views = viewService.getViews();
-        var columns = views.get(1).getColumns().stream().toList();
+        var columns = views.get(1).columns().stream().toList();
         var selectedColumn = columns.stream()
-                .filter(c -> c.getTitle().equals("Laterality"))
-                .collect(Collectors.toList())
-                .get(0);
-        Assert.assertEquals(Integer.valueOf(Integer.MAX_VALUE), selectedColumn.getDisplayIndex());
+                .filter(c -> c.title().equals("Laterality"))
+                .toList()
+                .getFirst();
+        Assert.assertEquals(Integer.valueOf(Integer.MAX_VALUE), selectedColumn.displayIndex());
     }
 
     @Test
@@ -164,45 +181,51 @@ public class ViewServiceTest extends PostgresAwareTest {
         verify(sut, never()).fetchViews();
     }
 
-    private Config.ViewDatabase buildViewDatabaseConfig() {
-        var viewDatabase = new Config.ViewDatabase();
-        viewDatabase.url = postgres.getJdbcUrl();
-        viewDatabase.username = postgres.getUsername();
-        viewDatabase.password = postgres.getPassword();
-        viewDatabase.maxPoolSize = 5;
-        return viewDatabase;
-    }
-
     private void loadTestData(Dataset ds)
             throws NotAuthorizedException, BadRequestException, ConflictException, IOException {
         // TODO: loaded data to be mocked instead of loading them this way
         Transactions tx = new SimpleTransactions(ds);
         Model model = ds.getDefaultModel();
         var vocabulary = model.read("test-vocabulary.ttl");
+        var userVocabulary = model.read("vocabulary.ttl");
+        var systemVocabulary = model.read("system-vocabulary.ttl");
 
         var workspaceService = new WorkspaceService(tx, userService);
 
         var context = new Context();
 
-        var davFactory = new DavFactory(model.createResource(baseUri), store, userService, context);
+        var davFactory = new DavFactory(
+                model.createResource(baseUri),
+                store,
+                userService,
+                context,
+                new WebDavProperties(),
+                userVocabulary,
+                vocabulary);
 
         when(permissions.canWriteMetadata(any())).thenReturn(true);
-        api = new MetadataService(tx, vocabulary, new ComposedValidator(new UniqueLabelValidator()), permissions);
+        api = new MetadataService(
+                tx,
+                vocabulary,
+                systemVocabulary,
+                new ComposedValidator(List.of(new UniqueLabelValidator())),
+                permissions);
 
         setupRequestContext();
+
+        var currentRequest = mock(HttpServletRequest.class);
+        RequestContext.setCurrentRequest(currentRequest);
+        RequestContext.setCurrentUserStringUri(
+                SparqlUtils.generateMetadataIriFromId("user").getURI());
         var request = getCurrentRequest();
 
         var taxonomies = model.read("test-taxonomies.ttl");
         api.put(taxonomies, Boolean.TRUE);
 
         User user = createTestUser("user", true);
-        Authentication.User userAuthentication = mockAuthentication("admin");
-        lenient().when(request.getAuthentication()).thenReturn(userAuthentication);
-        lenient().when(userService.currentUser()).thenReturn(user);
-
+        when(userService.currentUser()).thenReturn(user);
         var workspace = workspaceService.createWorkspace(
                 Workspace.builder().code("Test").build());
-
         when(request.getHeader("Owner")).thenReturn(workspace.getIri().getURI());
         when(request.getAttribute("BLOB")).thenReturn(new BlobInfo("id", 0, "md5"));
 
